--- a/public/src/style.css
+++ b/public/src/style.css
@@ -3,6 +3,7 @@
 }
 
 .container {
+    background-color: red;
     border: 3px solid black;
     border-radius: 25px;
     margin-top: 10px;
@@ -16,7 +17,6 @@
     min-height: 300px;
     position: relative;
     top: 75px;
-    /* transform: translateY(50%); */
     width: 800px;
 }
 
